Summr 2017 burger menu

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -53,12 +53,11 @@
                                 <li>Beef burger with seasonings and teriyaki sauce. Topped with grilled pineapple and swiss cheese.
                                     Served with bun and veggies. (Grill)</li>
                             </ul>
-                        </li
-                        <li>
-                            <strong>Bacon Cheddar Burger</strong>
-                            <ul>
-                                <li>Beef burger mixed with bacon and cheddar. Served with bun and veggies. (Grill)</li>
-                            </ul>
+                        </li <li>
+                        <strong>Bacon Cheddar Burger</strong>
+                        <ul>
+                            <li>Beef burger mixed with bacon and cheddar. Served with bun and veggies. (Grill)</li>
+                        </ul>
                         </li>
                         <li>
                             <strong>Hawaiian Pork</strong>
@@ -80,10 +79,94 @@
                             </ul>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h3 class="monthly-menu-header text-center">Burger Bonanza!</h3>
+                    <ul>
+                        <li>
+                            <strong>Double Double Bacon Cheddar Burger</strong>
+                            <ul>
+                                <li>Beef burger mixed with bacon and cheddar then topped with more bacon and cheddar. Comes with
+                                    buns.</li>
+                            </ul>
+                        </li>
+                        <li>
+
+                            <strong>Burger Mignon</strong>
+                            <ul>
+                                <li>Beef burger mixed with cheddar, blue cheese and seasonings. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Italian Meatball Burger</strong>
+                            <ul>
+                                <li>Beef burger seasoned and stuffed with mozzarella. Comes with marinara and garlic buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Green Chile Cheeseburger</strong>
+                            <ul>
+                                <li>Seasoned beef burger. Topped with cheddar and roasted green chiles. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Buffalo Chicken Burger</strong>
+                            <ul>
+                                <li>Chicken burger mixed with buffalo sauce and seasonings. Topped with blue cheese crumbles
+                                    and/or provolone. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Western Chicken Burger</strong>
+                            <ul>
+                                <li>Chicken burger mixed with cheddar, jalapeno, and bacon. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Mediterranean Turkey Burger</strong>
+                            <ul>
+                                <li>Turkey burger mixed with spinach, feta, and sun dried tomatoes. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Turkey Apple Cheddar Burger</strong>
+                            <ul>
+                                <li>Turkey mixed with apples, cheddar and spices. Comes with buns.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Cuban Pork Burger</strong>
+                            <ul>
+                                <li>Deliciously seasoned pork burger served on a crusty bun with ham and swiss cheese.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Triple Pork Burger</strong>
+                            <ul>
+                                <li>Seasoned pork and ground beef burger topped with ham, bacon, cheddar, and caramelized onions.
+                                    Comes with onion buns. </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
                     <h3 class="monthly-menu-header text-center">Gifts in a Jar!</h3>
-                    <h4 class="monthly-menu-header text-center">$7 each</h4> 
-                    <p class="text-center">Pick from Brownies, Reese’s peanut butter cookie, and/or S’more bars. Great
-                        client, teacher, or hostess gifts!</p>
+                    <h4 class="monthly-menu-header text-center">$7 each</h4>
+                    <p class="text-center">Pick from Brownies, Reese’s peanut butter cookie, and/or S’more bars. Great client, teacher, or hostess
+                        gifts!
+                    </p>
                 </div>
             </div>
         </div>
