--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>May 2017</p>
+                    <p>June 2017</p>
                 </div>
             </div>
         </div>
@@ -22,62 +22,82 @@
                             </ul>
                         </li>
                         <li>
-                            <strong>Cilantro Grilled Chicken</strong>
+                            <strong>Limoncello Chicken</strong>
                             <ul>
-                                <li>Grilled chicken topped with seasoned butter. Served with veggies. (Grilled)</li>
+                                <li>Herby, garlicky, lemony grilled chicken and onions. Served with flatbread and veggies. (Grilled)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Asparagus Stuffed Chicken</strong>
+                            <strong>Chicken Fajitas</strong>
                             <ul>
-                                <li>Chicken breast seasoned and stuffed with provolone and asparagus. Served with veggies. (Grilled
-                                    or Stovetop)</li>
+                                <li>Chicken marinated in lime and orange juices and seasonings then grilled with peppers and
+                                    onions for the best fajitas! Comes with tortillas. (Grilled)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>BBQ Baby Back Ribs</strong>
+                            <strong>Chicken Pesto Burger</strong>
                             <ul>
-                                <li>Delicious slow cooked ribs. Perfect for your next BBQ! Served with veggies and corn bread.
-                                    (Crockpot then grill or bake)</li>
+                                <li>Mix together chicken and pesto for a juicy, flavorful burger. Served with buns and fresh
+                                    mozzarella. (Grilled)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Chicken Burrito Bowls</strong>
+                            <strong>Pepper Steak</strong>
                             <ul>
-                                <li>Tasty chicken and veggies over rice. Served with cheese. (Crockpot)</li>
+                                <li>Italian seasoned steak, peppers, and onions slow cooked all day. Served with rice. (Crock
+                                    pot)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Teriyaki Burger</strong>
+                            <strong>Spicy Chipotle Burgers</strong>
                             <ul>
-                                <li>Beef burger with seasonings and teriyaki sauce. Topped with grilled pineapple and swiss cheese.
-                                    Served with bun and veggies. (Grill)</li>
+                                <li>Beef burgers seasoned with chipotles in adobo and cilantro. Served with buns and mozzarella.
+                                    (Grilled)</li>
                             </ul>
-                        </li <li>
-                        <strong>Bacon Cheddar Burger</strong>
-                        <ul>
-                            <li>Beef burger mixed with bacon and cheddar. Served with bun and veggies. (Grill)</li>
-                        </ul>
                         </li>
+
                         <li>
-                            <strong>Hawaiian Pork</strong>
+                            <strong>Asian Beef Tacos</strong>
                             <ul>
-                                <li>Marinated pork and pineapple served over brown rice. (Crockpot)</li>
+                                <li>Flank steak marinated in soy sauce, honey, ginger and herbs then slow cooked all day. Served
+                                    with tortillas. (Crock pot)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Italian Pork Roast</strong>
+                            <strong>Balsamic Honey Pulled Pork</strong>
                             <ul>
-                                <li>Pork roast slow cooked with herbs and tomatoes. Smells amazing and tastes great! Served with
-                                    spaghetti and green beans. (Crockpot)</li>
+                                <li>Pulled pork served with a delicious balsamic honey bbq sauce. Served with buns and veggies.
+                                    (Crock pot)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Crustless Bacon Swiss Quiche</strong>
+                            <strong>Herbed Pork Roast</strong>
                             <ul>
-                                <li>Flavorful quiche served with veggies. A way great to start or end your day! (Baked)</li>
+                                <li>Pork roast marinated in lemon juice and herbs and slow cooked all day. Served with roasted
+                                    veggies for Sunday dinner flavor on a hectic weekday night. (Crock pot)</li>
                             </ul>
                         </li>
+
+                        <li>
+                            <strong>Puerto Rican Shredded Pork</strong>
+                            <ul>
+                                <li>Juicy, citrus marinated pork served with corn tortillas and black beans. (Crockpot)</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Spicy Breakfast Sausage</strong>
+                            <ul>
+                                <li>Make your own breakfast sausage to serve with scrambled eggs. Another great breakfast for
+                                    dinner classic! (Stove top)</li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -89,7 +109,8 @@
                             <strong>Double Double Bacon Cheddar Burger</strong>
                             <ul>
                                 <li>Beef burger mixed with bacon and cheddar then topped with more bacon and cheddar. Comes with
-                                    buns.</li>
+                                    buns.
+                                </li>
                             </ul>
                         </li>
                         <li>
