Minor fixes for June 2017 menu

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -15,16 +15,9 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Grilled Southwestern Pork Chops with Honey Lime Sweet Potatoes</strong>
-                            <ul>
-                                <li>Juicy, seasoned pork chops and sweet potatoes tossed with honey lime sauce. A great new way
-                                    to try sweet potatoes. (Grilled)</li>
-                            </ul>
-                        </li>
-                        <li>
                             <strong>Limoncello Chicken</strong>
                             <ul>
-                                <li>Herby, garlicky, lemony grilled chicken and onions. Served with flatbread and veggies. (Grilled)</li>
+                                <li>Herby, garlicky, lemony grilled chicken and onions. Served with veggies. (Grilled)</li>
                             </ul>
                         </li>
                         <li>
