Additional June 2017 menu fixes

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -117,7 +117,7 @@
                         <li>
                             <strong>Italian Meatball Burger</strong>
                             <ul>
-                                <li>Beef burger seasoned and stuffed with mozzarella. Comes with marinara and garlic buns.
+                                <li>Beef and Italian sausage burger seasoned and stuffed with mozzarella. Comes with marinara and garlic buns.
                                 </li>
                             </ul>
                         </li>
