--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>June 2017</p>
+                    <p>July 2017</p>
                 </div>
             </div>
         </div>
@@ -15,82 +15,91 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Limoncello Chicken</strong>
+                            <strong>Cheddar Bacon Ranch Burgers</strong>
                             <ul>
-                                <li>Herby, garlicky, lemony grilled chicken and onions. Served with veggies. (Grilled)</li>
+                                <li>
+                                    Juicy beef burgers seasoned with bacon, cheddar and ranch. A flavorful burger that is ready for the grill! Comes with buns.
+                                    (Grilled)
+                                </li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Chicken Fajitas</strong>
+                            <strong>Burgers and Bacon Wrapped Jalapeno Poppers</strong>
                             <ul>
-                                <li>Chicken marinated in lime and orange juices and seasonings then grilled with peppers and
-                                    onions for the best fajitas! Comes with tortillas. (Grilled)</li>
+                                <li>
+                                    Beef burgers with an amazing side! This is one of my favorite jalapeno poppers. I prep the peppers and you stuff them with
+                                    cheddar and wrap in bacon. A side that will amaze everyone! Comes with buns. (Grilled)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Chicken Pesto Burger</strong>
+                            <strong>Broccoli Beef</strong>
                             <ul>
-                                <li>Mix together chicken and pesto for a juicy, flavorful burger. Served with buns and fresh
-                                    mozzarella. (Grilled)</li>
+                                <li>
+                                    Beef is slow cooked all day. Add broccoli and rice when you get home and you have a Chinese favorite ready faster than delivery!
+                                    Comes with broccoli and rice. (Slow Cooker)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Pepper Steak</strong>
+                            <strong>Lemon Pesto Chicken</strong>
                             <ul>
-                                <li>Italian seasoned steak, peppers, and onions slow cooked all day. Served with rice. (Crock
-                                    pot)</li>
+                                <li>
+                                    Chicken marinated in the bright flavors of summer. Comes with veggies. (Grilled)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Spicy Chipotle Burgers</strong>
+                            <strong>Italian Chicken and Grilled Pepper Salad</strong>
                             <ul>
-                                <li>Beef burgers seasoned with chipotles in adobo and cilantro. Served with buns and mozzarella.
-                                    (Grilled)</li>
+                                <li>
+                                    Chicken marinated in Italian flavors and served with the best summer salad. Peppers are grilled and mixed with olive oil
+                                    and basil for a light, tasty dish! (Grilled)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Asian Beef Tacos</strong>
+                            <strong>Caprese Stuffed Chicken</strong>
                             <ul>
-                                <li>Flank steak marinated in soy sauce, honey, ginger and herbs then slow cooked all day. Served
-                                    with tortillas. (Crock pot)</li>
+                                <li>
+                                    Chicken stuffed with mozzarella, tomatoes, and basil. Comes with veggies (Grilled or baked)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Balsamic Honey Pulled Pork</strong>
+                            <strong>Pork Chops with Blueberry Bourbon BBQ Sauce</strong>
                             <ul>
-                                <li>Pulled pork served with a delicious balsamic honey bbq sauce. Served with buns and veggies.
-                                    (Crock pot)</li>
+                                <li>
+                                    The most amazing BBQ sauce ever! I serve it with everything, but it is especially tasty with grilled pork chops. Comes with
+                                    veggies. (Grilled and stovetop)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Herbed Pork Roast</strong>
+                            <strong>Asian Pork Wraps</strong>
                             <ul>
-                                <li>Pork roast marinated in lemon juice and herbs and slow cooked all day. Served with roasted
-                                    veggies for Sunday dinner flavor on a hectic weekday night. (Crock pot)</li>
+                                <li>
+                                    Slow cooked pork wrapped in warm flour tortillas. Comes with flour tortillas and sesame seeds. (Slow Cooker)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Puerto Rican Shredded Pork</strong>
+                            <strong>Cheddar Stuffed, Bacon Wrapped Hot Dogs</strong>
                             <ul>
-                                <li>Juicy, citrus marinated pork served with corn tortillas and black beans. (Crockpot)</li>
+                                <li>
+                                    Go all out with a gourmet dog! Comes with buns and veggies. (Grilled)
+                                </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Spicy Breakfast Sausage</strong>
+                            <strong>Brown Sugar Balsamic Pork</strong>
                             <ul>
-                                <li>Make your own breakfast sausage to serve with scrambled eggs. Another great breakfast for
-                                    dinner classic! (Stove top)</li>
+                                <li>
+                                    Herb rubbed pork slow cooked all day and topped with
+                                    a flavorful balsamic glaze. Comes with veggies. (Slow Cooker)
+                                </li>
                             </ul>
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -117,7 +126,8 @@
                         <li>
                             <strong>Italian Meatball Burger</strong>
                             <ul>
-                                <li>Beef and Italian sausage burger seasoned and stuffed with mozzarella. Comes with marinara and garlic buns.
+                                <li>Beef and Italian sausage burger seasoned and stuffed with mozzarella. Comes with marinara
+                                    and garlic buns.
                                 </li>
                             </ul>
                         </li>
