--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,90 +14,70 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
-                        <li>
-                            <strong>Cheddar Bacon Ranch Burgers</strong>
+                        <li><strong>Grilled Flank Steak with Peaches</strong>
                             <ul>
-                                <li>
-                                    Juicy beef burgers seasoned with bacon, cheddar and ranch. A flavorful burger that is ready for the grill! Comes with buns.
-                                    (Grilled)
-                                </li>
+                                <li>Marinated flank steaks served with grilled peaches. One of the best ways to taste the flavors
+                                    of the season! (Grilled)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Burgers and Bacon Wrapped Jalapeno Poppers</strong>
+
+                        <li><strong>Philly Cheesesteak Stuffed Peppers</strong>
                             <ul>
-                                <li>
-                                    Beef burgers with an amazing side! This is one of my favorite jalapeno poppers. I prep the peppers and you stuff them with
-                                    cheddar and wrap in bacon. A side that will amaze everyone! Comes with buns. (Grilled)
-                                </li>
+                                <li>Bell peppers stuffed with beef and onions then topped with provolone. (Stovetop then bake)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Broccoli Beef</strong>
+
+                        <li><strong>Cajun Burgers</strong>
                             <ul>
-                                <li>
-                                    Beef is slow cooked all day. Add broccoli and rice when you get home and you have a Chinese favorite ready faster than delivery!
-                                    Comes with broccoli and rice. (Slow Cooker)
-                                </li>
+                                <li>Beef mixed with the Holy Trinity of Cajun cooking (onion, celery, green pepper, garlic) and
+                                    Cajun seasoning. Topped with pepper jack and served on an onion bun. (Grilled)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Lemon Pesto Chicken</strong>
+
+                        <li><strong>Beef Burger with Pimento Cheese</strong>
                             <ul>
-                                <li>
-                                    Chicken marinated in the bright flavors of summer. Comes with veggies. (Grilled)
-                                </li>
+                                <li>Juicy burgers topped with melty pimento cheese (cheddar and peppers). Comes with buns. (Grilled)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Italian Chicken and Grilled Pepper Salad</strong>
+
+                        <li><strong>Salsa Verde Chicken</strong>
                             <ul>
-                                <li>
-                                    Chicken marinated in Italian flavors and served with the best summer salad. Peppers are grilled and mixed with olive oil
-                                    and basil for a light, tasty dish! (Grilled)
-                                </li>
+                                <li>Slow cooked chicken with salsa verde. Served in corn tortillas. Soon to become a Taco Tuesday
+                                    favorite! (Slow cooker)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Caprese Stuffed Chicken</strong>
+
+                        <li><strong>Roasted Chicken and Veggies</strong>
                             <ul>
-                                <li>
-                                    Chicken stuffed with mozzarella, tomatoes, and basil. Comes with veggies (Grilled or baked)
-                                </li>
+                                <li>A one pan wonder! Juicy chicken roasted with a bounty of seasonal veggies! (Grill or oven)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Pork Chops with Blueberry Bourbon BBQ Sauce</strong>
+
+                        <li><strong>Turkey Burger and Baked Beans</strong>
                             <ul>
-                                <li>
-                                    The most amazing BBQ sauce ever! I serve it with everything, but it is especially tasty with grilled pork chops. Comes with
-                                    veggies. (Grilled and stovetop)
-                                </li>
+                                <li>Juicy turkey burgers and slow cooker baked beans. Perfect for the end of summer BBQ! (Grill
+                                    and slow cooker)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Asian Pork Wraps</strong>
+
+                        <li><strong>Chile Rubbed Pork Chops with Southwestern Black Bean and Corn Salad</strong>
                             <ul>
-                                <li>
-                                    Slow cooked pork wrapped in warm flour tortillas. Comes with flour tortillas and sesame seeds. (Slow Cooker)
-                                </li>
+                                <li>Grilled, spiced pork chops served with a grilled veggie salad. (Grill)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Cheddar Stuffed, Bacon Wrapped Hot Dogs</strong>
+
+                        <li><strong>Pork, Corn and Zucchini Enchiladas</strong>
                             <ul>
-                                <li>
-                                    Go all out with a gourmet dog! Comes with buns and veggies. (Grilled)
-                                </li>
+                                <li>Pork and veggies slow cooked to create a delicious enchilada filling. Then fill tortillas
+                                    and smother them with cheese. It is a great dinner using lots of seasonal veggies. (Slow
+                                    cooker then baked)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Brown Sugar Balsamic Pork</strong>
+
+                        <li><strong>Teriyaki Pork</strong>
                             <ul>
-                                <li>
-                                    Herb rubbed pork slow cooked all day and topped with
-                                    a flavorful balsamic glaze. Comes with veggies. (Slow Cooker)
-                                </li>
+                                <li>Slow cooked pork, veggies and pineapple with a luscious homemade teriyaki sauce. Comes with
+                                    rice. (Slow cooker)</li>
                             </ul>
                         </li>
                     </ul>
