--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>August 2017</p>
+                    <p>September 2017</p>
                 </div>
             </div>
         </div>
@@ -14,70 +14,71 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
-                        <li><strong>Grilled Flank Steak with Peaches</strong>
+                        <li>
+                            <strong>Slow Cooked Spaghetti</strong>
                             <ul>
-                                <li>Marinated flank steaks served with grilled peaches. One of the best ways to taste the flavors
-                                    of the season! (Grilled)</li>
+                                <li>Delicious, flavorful spaghetti sauce. Perfect for the day you want slow cooked sauce but
+                                    only have time to boil noodles. Comes with noodles and Awesome Bread. (Slow cooker)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Philly Cheesesteak Stuffed Peppers</strong>
+                        <li>
+                            <strong>Barbacoa Beef</strong>
                             <ul>
-                                <li>Bell peppers stuffed with beef and onions then topped with provolone. (Stovetop then bake)</li>
+                                <li>Flavorful beef perfect for tacos, nachos or quesadillas! Comes with tortillas and cheese.
+                                    (Slow cooker)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Cajun Burgers</strong>
+                        <li>
+                            <strong>Beef Tips and Roasted Red Onions with Balsamic and Honey</strong>
                             <ul>
-                                <li>Beef mixed with the Holy Trinity of Cajun cooking (onion, celery, green pepper, garlic) and
-                                    Cajun seasoning. Topped with pepper jack and served on an onion bun. (Grilled)</li>
+                                <li>Juice, herby pieces of beef served with roasted onions. A fall favorite! (Oven)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Beef Burger with Pimento Cheese</strong>
+                        <li>
+                            <strong>Chicken Teriyaki</strong>
                             <ul>
-                                <li>Juicy burgers topped with melty pimento cheese (cheddar and peppers). Comes with buns. (Grilled)</li>
+                                <li>Chicken cooked in a homemade teriyaki sauce. Comes with stir fry veggies and rice. (Stovetop)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Salsa Verde Chicken</strong>
+                        <li>
+                            <strong>Balsamic Chicken and Veggies</strong>
                             <ul>
-                                <li>Slow cooked chicken with salsa verde. Served in corn tortillas. Soon to become a Taco Tuesday
-                                    favorite! (Slow cooker)</li>
+                                <li>A one pot wonder! Chicken with green beans, carrots and tomatoes tossed with a delicious
+                                    balsamic sauce. (Stovetop)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Roasted Chicken and Veggies</strong>
+                        <li>
+                            <strong>Hot Ham and Swiss Croissants</strong>
                             <ul>
-                                <li>A one pan wonder! Juicy chicken roasted with a bounty of seasonal veggies! (Grill or oven)</li>
+                                <li>Flakey croissants layered with homemade honey mustard, Swiss and ham. A delicious dinner
+                                    ready in minutes! Comes with veggies. (Oven)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Turkey Burger and Baked Beans</strong>
+                        <li>
+                            <strong>Green Chile and Cheese Stuffed Pork Chops</strong>
                             <ul>
-                                <li>Juicy turkey burgers and slow cooker baked beans. Perfect for the end of summer BBQ! (Grill
-                                    and slow cooker)</li>
+                                <li>Thick, juicy pork chops stuffed with green chiles and cheddar. Comes with veggies. (Oven)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Chile Rubbed Pork Chops with Southwestern Black Bean and Corn Salad</strong>
+                        <li>
+                            <strong>Curried Pork Burgers</strong>
                             <ul>
-                                <li>Grilled, spiced pork chops served with a grilled veggie salad. (Grill)</li>
+                                <li>Ground pork mixed with seasonings and topped with grilled onions. Great to throw on the grill
+                                    while you enjoy the fall weather. Comes with Texas toast. (Grill)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Pork, Corn and Zucchini Enchiladas</strong>
+                        <li>
+                            <strong>Tortellini Arrabbiata</strong>
                             <ul>
-                                <li>Pork and veggies slow cooked to create a delicious enchilada filling. Then fill tortillas
-                                    and smother them with cheese. It is a great dinner using lots of seasonal veggies. (Slow
-                                    cooker then baked)</li>
+                                <li>Veggie filled sauce served over cheese tortellini. Perfect for Meatless Monday! (Stovetop)</li>
                             </ul>
                         </li>
-
-                        <li><strong>Teriyaki Pork</strong>
+                        <li>
+                            <strong>Breakfast Stuffed Peppers</strong>
                             <ul>
-                                <li>Slow cooked pork, veggies and pineapple with a luscious homemade teriyaki sauce. Comes with
-                                    rice. (Slow cooker)</li>
+                                <li>A tasty twist on stuffed peppers. Bell peppers stuffed with hash browns and sausage. Topped
+                                    with cheese and eggs. A great way to start the day or have breakfast for dinner. (Stovetop
+                                    then oven)</li>
                             </ul>
                         </li>
                     </ul>
