--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>September 2017</p>
+                    <p>October 2017</p>
                 </div>
             </div>
         </div>
@@ -15,163 +15,82 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Slow Cooked Spaghetti</strong>
+                            <strong>BBQ Bacon Onion Bombs</strong>
                             <ul>
-                                <li>Delicious, flavorful spaghetti sauce. Perfect for the day you want slow cooked sauce but
-                                    only have time to boil noodles. Comes with noodles and Awesome Bread. (Slow cooker)</li>
+                                <li>Homemade meatballs wrapped in onion wrapped in bacon. Soon to be your fall favorite! Comes
+                                    with veggies. (Oven)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Barbacoa Beef</strong>
-                            <ul>
-                                <li>Flavorful beef perfect for tacos, nachos or quesadillas! Comes with tortillas and cheese.
-                                    (Slow cooker)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Beef Tips and Roasted Red Onions with Balsamic and Honey</strong>
-                            <ul>
-                                <li>Juice, herby pieces of beef served with roasted onions. A fall favorite! (Oven)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Chicken Teriyaki</strong>
-                            <ul>
-                                <li>Chicken cooked in a homemade teriyaki sauce. Comes with stir fry veggies and rice. (Stovetop)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Balsamic Chicken and Veggies</strong>
-                            <ul>
-                                <li>A one pot wonder! Chicken with green beans, carrots and tomatoes tossed with a delicious
-                                    balsamic sauce. (Stovetop)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Hot Ham and Swiss Croissants</strong>
-                            <ul>
-                                <li>Flakey croissants layered with homemade honey mustard, Swiss and ham. A delicious dinner
-                                    ready in minutes! Comes with veggies. (Oven)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Green Chile and Cheese Stuffed Pork Chops</strong>
-                            <ul>
-                                <li>Thick, juicy pork chops stuffed with green chiles and cheddar. Comes with veggies. (Oven)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Curried Pork Burgers</strong>
-                            <ul>
-                                <li>Ground pork mixed with seasonings and topped with grilled onions. Great to throw on the grill
-                                    while you enjoy the fall weather. Comes with Texas toast. (Grill)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Tortellini Arrabbiata</strong>
-                            <ul>
-                                <li>Veggie filled sauce served over cheese tortellini. Perfect for Meatless Monday! (Stovetop)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Breakfast Stuffed Peppers</strong>
-                            <ul>
-                                <li>A tasty twist on stuffed peppers. Bell peppers stuffed with hash browns and sausage. Topped
-                                    with cheese and eggs. A great way to start the day or have breakfast for dinner. (Stovetop
-                                    then oven)</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3 class="monthly-menu-header text-center">Burger Bonanza!</h3>
-                    <ul>
-                        <li>
-                            <strong>Double Double Bacon Cheddar Burger</strong>
-                            <ul>
-                                <li>Beef burger mixed with bacon and cheddar then topped with more bacon and cheddar. Comes with
-                                    buns.
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
 
-                            <strong>Burger Mignon</strong>
+                        <li>
+                            <strong>Chili Cheese Burgers</strong>
                             <ul>
-                                <li>Beef burger mixed with cheddar, blue cheese and seasonings. Comes with buns.
+                                <li>Burgers cooked with a quick chili and topped with melty cheese. Comes with buns. (Stovetop)</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Red Wine Roast with Creamy Polenta and Roasted Radishes</strong>
+                            <ul>
+                                <li>Herb rubbed roast cooked in red wine. Perfect for Sunday dinner and no one has to know it
+                                    took you less than half an hour to make! (Slow cooker)</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Honey Lime Chicken with Butternut Squash</strong>
+                            <ul>
+                                <li>The perfect blend of squash, chicken and seasonings. Served over rice. (Slow cooker)</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Apple Cider Pulled Chicken</strong>
+                            <ul>
+                                <li>Juicy shredded chicken that makes a great sandwich. Comes with sourdough and cheddar. (Slow
+                                    cooker)
                                 </li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Italian Meatball Burger</strong>
+                            <strong>Jamaican Jerk Pork Burger</strong>
                             <ul>
-                                <li>Beef and Italian sausage burger seasoned and stuffed with mozzarella. Comes with marinara
-                                    and garlic buns.
-                                </li>
+                                <li>Flavorful, seasoned pork burgers. Comes with buns and pepper jack cheese. (Stovetop or Grill)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Green Chile Cheeseburger</strong>
+                            <strong>Spicy Pork Burrito Bowls</strong>
                             <ul>
-                                <li>Seasoned beef burger. Topped with cheddar and roasted green chiles. Comes with buns.
-                                </li>
+                                <li>Pork and veggies seasoned to your taste. Add some rice and you have the perfect burrito bowl!
+                                    Comes with rice and cheese. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Buffalo Chicken Burger</strong>
+                            <strong>Cuban Sandwiches</strong>
                             <ul>
-                                <li>Chicken burger mixed with buffalo sauce and seasonings. Topped with blue cheese crumbles
-                                    and/or provolone. Comes with buns.
-                                </li>
+                                <li>I love Cuban sandwiches! Pork is slow cooked with citrus and herbs all day. Add ham and Swiss
+                                    and you have an amazing sandwich. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Western Chicken Burger</strong>
+                            <strong>Pumpkin Coconut Bisque</strong>
                             <ul>
-                                <li>Chicken burger mixed with cheddar, jalapeno, and bacon. Comes with buns.
-                                </li>
+                                <li>One of my favorite soups! It is the perfect flavor of fall. (Stovetop)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Mediterranean Turkey Burger</strong>
+                            <strong>Italian Breakfast Bake</strong>
                             <ul>
-                                <li>Turkey burger mixed with spinach, feta, and sun dried tomatoes. Comes with buns.
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Turkey Apple Cheddar Burger</strong>
-                            <ul>
-                                <li>Turkey mixed with apples, cheddar and spices. Comes with buns.
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Cuban Pork Burger</strong>
-                            <ul>
-                                <li>Deliciously seasoned pork burger served on a crusty bun with ham and swiss cheese.
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Triple Pork Burger</strong>
-                            <ul>
-                                <li>Seasoned pork and ground beef burger topped with ham, bacon, cheddar, and caramelized onions.
-                                    Comes with onion buns. </li>
+                                <li>Layers of hash browns, ham, salami, mozzarella and eggs baked into a delicious casserole.
+                                    It is a great dish for a chilly autumn morning or evening! (Oven)</li>
                             </ul>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3 class="monthly-menu-header text-center">Gifts in a Jar!</h3>
-                    <h4 class="monthly-menu-header text-center">$7 each</h4>
-                    <p class="text-center">Pick from Brownies, Reese’s peanut butter cookie, and/or S’more bars. Great client, teacher, or hostess
-                        gifts!
-                    </p>
                 </div>
             </div>
         </div>
