November 2017 menu update

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>October 2017</p>
+                    <p>November 2017</p>
                 </div>
             </div>
         </div>
@@ -21,76 +21,78 @@
                                     with veggies. (Oven)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Chili Cheese Burgers</strong>
+                            <strong>Day Before Roast</strong>
                             <ul>
-                                <li>Burgers cooked with a quick chili and topped with melty cheese. Comes with buns. (Stovetop)</li>
+                                <li>Delicious roast slow cooked until it falls apart. Makes the best roast beef sandwiches with au jus! Comes with rolls and veggies. (Slow cooker)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Red Wine Roast with Creamy Polenta and Roasted Radishes</strong>
+                            <strong>Asian Five Spice Meatballs</strong>
                             <ul>
-                                <li>Herb rubbed roast cooked in red wine. Perfect for Sunday dinner and no one has to know it
-                                    took you less than half an hour to make! (Slow cooker)</li>
+                                <li>Great Asian flavored meatballs, slow cooked all day. Comes with rice and veggies. (Slow cooker)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Honey Lime Chicken with Butternut Squash</strong>
+                            <strong>Orange Rosemary Chicken</strong>
                             <ul>
-                                <li>The perfect blend of squash, chicken and seasonings. Served over rice. (Slow cooker)</li>
+                                <li>Citrus marinated chicken served with rice and veggies. (Baked)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Apple Cider Pulled Chicken</strong>
+                            <strong>Turkey Chili Nachos</strong>
                             <ul>
-                                <li>Juicy shredded chicken that makes a great sandwich. Comes with sourdough and cheddar. (Slow
-                                    cooker)
+                                <li>A delicious sauce to serve over nachos! Comes with tortilla chips and cheese. (Stovetop)
+                                    </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Sweet and Spicy Bacon Wrapped Chicken</strong>
+                            <ul>
+                                <li>The name says it all! Bacon wrapped chicken seasoned with a little sweet and a little spice. (Baked)
                                 </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Jamaican Jerk Pork Burger</strong>
+                            <strong>Apple Glazed Pork with Cheesy Grits</strong>
                             <ul>
-                                <li>Flavorful, seasoned pork burgers. Comes with buns and pepper jack cheese. (Stovetop or Grill)</li>
+                                <li>Slightly sweet, seasoned pork served over cheesy grits. (Slow cooker)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Spicy Pork Burrito Bowls</strong>
+                            <strong>Sausage Cranberry Ragu</strong>
                             <ul>
-                                <li>Pork and veggies seasoned to your taste. Add some rice and you have the perfect burrito bowl!
-                                    Comes with rice and cheese. (Slow cooker)</li>
+                                <li>A fun seasonal dinner. This pasta sauce is a great combination of fall flavors. Comes with pasta. (Stovetop) </li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Cuban Sandwiches</strong>
+                            <strong>Sweet Potato Turkey Hash</strong>
                             <ul>
-                                <li>I love Cuban sandwiches! Pork is slow cooked with citrus and herbs all day. Add ham and Swiss
-                                    and you have an amazing sandwich. (Slow cooker)</li>
+                                <li>This is one of my favorite ways to use turkey! Sautéed sweet potatoes and turkey slightly sweetened with maple syrup. Perfect for breakfast or dinner! (Stovetop)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Pumpkin Coconut Bisque</strong>
+                            <strong>Corn Chowder</strong>
                             <ul>
-                                <li>One of my favorite soups! It is the perfect flavor of fall. (Stovetop)</li>
+                                <li>I love soup and this one has moved to the top of my favorites list! Slow cooked all day with
+                                    a touch of cream added at the end. (Slow cooker)</li>
                             </ul>
                         </li>
-
                         <li>
-                            <strong>Italian Breakfast Bake</strong>
+                            <strong>Chili</strong>
                             <ul>
-                                <li>Layers of hash browns, ham, salami, mozzarella and eggs baked into a delicious casserole.
-                                    It is a great dish for a chilly autumn morning or evening! (Oven)</li>
+                                <li>This veggie packed chili is perfect for a chilly November evening. (Slow cooker)</li>
                             </ul>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h3 class="text-center">Gifts in a Jar are back<span class="exclamation-font">!</span></h3>
+                    <p>
+                        Through December you can make <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
+                    </p>
                 </div>
             </div>
         </div>
