--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -89,6 +89,65 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
+                    <h3 class="text-center">Thanksgiving Sides</h3>
+                    <p>Do you need a side dish for Thanksgiving? Or all the sides? Dinner Delights to the rescue! I do the cooking so you can enjoy time with your family and friends. All you have to do it warm the dish up! Pick up is SATURDAY Nov. 18 at Capitol Hill Lutheran Church at 511 Des Moines St., Des Moines (<a href="https://goo.gl/maps/YHZSVLLdjC22" target="_blank">Open in Google Maps <i class="fa fa-external-link" aria-hidden="true"></i></a>). All dishes serve 14-16.</p>
+
+                    <p>Free to pick up! $5 for delivery.</p>
+
+                    <ul>
+                        <li>
+                            <strong>Mashed Potatoes and Gravy (GF)</strong>
+                            <ul>
+                                <li>Real, skin on mashed potatoes with a creamy roasted vegetable gravy. $15</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Stuffing/Dressing</strong>
+                            <ul>
+                                <li>World famous (in parts of Colorado, New Mexico, and Iowa) stuffing! Homemade sour dough croutons mixed with veggies, herbs and pine nuts. Chicken or vegetable stock on the side for you to mix to your preferred moistness. $20</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Sweet Potatoes (GF)</strong>
+                            <ul>
+                                <li>Baked sweet potatoes topped with brown sugar and spices. Comes with a bag of marshmallows for extra sweetness. $15</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Scalloped Corn (can be made GF)</strong>
+                            <ul>
+                                <li>Creamy corn and cheese casserole. A great way to get more veggies. $15</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Ginger Glazed Carrots (GF)</strong>
+                            <ul>
+                                <li>Carrots with a sweet ginger glaze. $15</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Cranberry Pear Sauce (GF)</strong>
+                            <ul>
+                                <li>No can ridges here! A delicious sauce made from fresh cranberries, citrus and pears. It is our family favorite! $15</li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <strong>Pumpkin Pie Crunch (can be GF)</strong>
+                            <ul>
+                                <li>Looking for an alternative to pumpkin pie? Here is a great dessert! A delicious dump cake that will have no one missing pumpkin pie! $20</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
                     <h3 class="text-center">Gifts in a Jar are back<span class="exclamation-font">!</span></h3>
                     <p>
                         Through December you can make <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
