--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -777,3 +777,7 @@ textarea:focus {
 .monthly-menu-header {
 	font-family: 'Open Sans', sans-serif;
 }
+
+i.fa.fa-external-link {
+	font-size: 16px;
+}
