Added buy link for Thanksgiving Sides

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -144,6 +144,9 @@
                             </ul>
                         </li>
                     </ul>
+                    <p class="text-center">
+                        <a href="http://buytickets.at/dinnerdelights/123929" class="btn btn-primary" target="_blank">BUY THANKSGIVING SIDES NOW</a>
+                    </p>
                 </div>
             </div>
             <div class="row">
