--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h3 class="text-center">Thanksgiving Sides</h3>
-                    <p>Do you need a side dish for Thanksgiving? Or all the sides? Dinner Delights to the rescue! I do the cooking so you can enjoy time with your family and friends. All you have to do it warm the dish up! Pick up is SATURDAY Nov. 18 at Capitol Hill Lutheran Church at 511 Des Moines St., Des Moines (<a href="https://goo.gl/maps/YHZSVLLdjC22" target="_blank">Open in Google Maps <i class="fa fa-external-link" aria-hidden="true"></i></a>). All dishes serve 14-16.</p>
+                    <p>Do you need a side dish for Thanksgiving? Or all the sides? Dinner Delights to the rescue! I do the cooking so you can enjoy time with your family and friends. All you have to do it warm the dish up! Pick up is SATURDAY Nov. 18 from 12-4 at Capitol Hill Lutheran Church, 511 Des Moines St., Des Moines (<a href="https://goo.gl/maps/YHZSVLLdjC22" target="_blank">Open in Google Maps <i class="fa fa-external-link" aria-hidden="true"></i></a>). All dishes serve 14-16.</p>
 
                     <p>Free to pick up! $5 for delivery.</p>
 
